@@ -15,6 +15,11 @@ See http://www.pserc.cornell.edu/matpower/ for more info.
 Changes since 4.1
 -----------------
 
+8/30/12
+    - Major speed-up in @opt_model/linear_constraints() by building
+      transpose of A (assigning to full columns) then transposing
+      back as opposed to building A directly (assigning full rows).
+
 8/1/12
     - Added function margcost() for computing the marginal cost of
       generation.
